--- a/margin-and-padding/margin-and-padding-2/style.css
+++ b/margin-and-padding/margin-and-padding-2/style.css
@@ -1,27 +1,38 @@
 body {
-  background: #eee;
-  font-family: sans-serif;
+    background: #eee;
+    font-family: sans-serif;
 }
 
 .card {
-  width: 400px;
-  background: #fff;
-  margin: 16px auto;
+    width: 400px;
+    background: #fff;
+    margin: 16px auto;
+    border: 10px solid white;
 }
 
 .title {
-  background: #e3f4ff;
+    background: #e3f4ff;
+    padding: 10px;
+    font-size: 20px;
 }
 
 .content {
-  background: #e3f4ff;
+    background: #e3f4ff;
+    padding: 16px 8px 16px;
+    margin: 16px auto 16px;
 }
 
 .button-container {
-  background: #e3f4ff;
+    background: #e3f4ff;
+    padding: 8px;
+    text-align: center;
 }
 
 button {
-  background: white;
-  border: 1px solid #eee;
+    background: white;
+    border: 1px solid #eee;
+    margin: auto;
+    display: block;
+    width: 150px;
+    height: 40px;
 }
