--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,25 +1,34 @@
-.header  {
-  font-family: monospace;
-  background: papayawhip;
+.header {
+    font-family: monospace;
+    background: papayawhip;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 8px;
 }
 
 .logo {
-  font-size: 48px;
-  font-weight: 900;
-  color: tomato;
-  background: white;
-  padding: 4px 32px;
+    font-size: 48px;
+    font-weight: 900;
+    color: tomato;
+    background: white;
+    padding: 4px 32px;
 }
 
 ul {
-  /* this removes the dots on the list items*/
-  list-style-type: none;
+    /* this removes the dots on the list items*/
+    list-style-type: none;
+    display: flex;
+    /*well by default flex containers will have a flex-direction default value of row, so it makes all the list items start from left and end at the right on main axis. */
+    padding: 0px;
+    margin: 0px;
+    gap: 8px;
 }
 
 a {
-  font-size: 22px;
-  background: white;
-  padding: 8px;
-  /* this removes the line under the links */
-  text-decoration: none;
+    font-size: 22px;
+    background: white;
+    padding: 8px;
+    /* this removes the line under the links */
+    text-decoration: none;
 }
